--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.388" />
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/categoryListView"
         android:layout_width="364dp"
         android:layout_height="518dp"
