--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="16dp"
-        android:text="Products"
+        android:text="Categories"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/categoryListView"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -21,15 +21,16 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/productsListView"
-        android:layout_width="364dp"
-        android:layout_height="518dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:divider="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:divider="@null" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
